[package]
name = "yubihsm"
version = "0.43.0-pre"
description = """
Pure Rust client for YubiHSM2 devices with support for HTTP and
USB-based access to the device. Supports most HSM functionality
including ECDSA, Ed25519, HMAC, and RSA.
"""
license = "Apache-2.0 OR MIT"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
documentation = "https://docs.rs/yubihsm"
repository = "https://github.com/iqlusioninc/yubihsm.rs"
readme = "README.md"
categories = ["cryptography", "hardware-support"]
keywords = ["ecdsa", "ed25519", "hmac", "hsm", "yubikey"]
edition = "2021"
rust-version = "1.83"

[dependencies]
aes = { version = "=0.9.0-pre.2", features = ["zeroize"] }
bitflags = "2"
cmac = "=0.8.0-pre.2"
cbc = "=0.2.0-pre.2"
ccm = { version = "0.5", features = ["std"] }
digest = { version = "=0.11.0-pre.9", default-features = false }
ecdsa = { version = "=0.17.0-pre.9", default-features = false, features = ["pkcs8"] }
ed25519 = "=2.3.0-pre.0"
log = "0.4"
num-traits = "0.2"
p256 = { version = "=0.14.0-pre.2", default-features = false, features = ["ecdsa"] }
p384 = { version = "=0.14.0-pre.2", default-features = false, features = ["ecdsa"] }
p521 = { version = "=0.14.0-pre.2", default-features = false, features = ["ecdsa"] }
serde = { version = "1", features = ["serde_derive"] }
rand_core = { version = "0.6", features = ["std"] }
rsa = "=0.10.0-pre.3"
signature = { version = "=2.3.0-pre.4", features = ["derive"] }
sha1 = { version = "=0.11.0-pre.4", features = ["oid"] }
sha2 = { version = "=0.11.0-pre.4", features = ["oid"] }
spki = { version = "=0.8.0-rc.1", default-features = false }
subtle = "2"
thiserror = "1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", default-features = false }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# optional dependencies
ed25519-dalek = { version = "=2.2.0-pre", optional = true, features = ["rand_core"] }
hmac = { version = "=0.13.0-pre.4", optional = true }
k256 = { version = "=0.14.0-pre.2", optional = true, features = ["ecdsa", "sha256"] }
pbkdf2 = { version = "=0.13.0-pre.1", optional = true, default-features = false, features = ["hmac"] }
serde_json = { version = "1", optional = true }
rusb = { version = "0.9.4", optional = true }
tiny_http = { version = "0.12", optional = true }

[dev-dependencies]
ed25519-dalek = "=2.2.0-pre"
hex-literal = "0.4"
once_cell = "1"
rsa = { version = "=0.10.0-pre.3", features = ["sha1", "sha2"] }
p256 = { version = "=0.14.0-pre.2", features = ["ecdsa"] }
p384 = { version = "=0.14.0-pre.2", features = ["ecdsa"] }
p521 = { version = "=0.14.0-pre.2", features = ["ecdsa"] }
x509-cert = { version = "=0.3.0-pre.0", features = ["builder"] }

[features]
default = ["http", "passwords", "setup"]
http-server = ["tiny_http"]
http = []
mockhsm = ["ecdsa/arithmetic", "ed25519-dalek", "p256/ecdsa", "p384/pkcs8", "secp256k1"]
passwords = ["hmac", "pbkdf2"]
secp256k1 = ["k256"]
setup = ["passwords", "serde_json", "uuid/serde"]
untested = []
usb = ["rusb"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "connector_http_server"
required-features = ["http-server", "usb"]

[patch.crates-io]
ccm = { git = "https://github.com/RustCrypto/AEADs.git" }

k256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

# https://github.com/dalek-cryptography/curve25519-dalek/pull/576
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", branch = "rustcrypto-new-releases" }
ed25519-dalek    = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", branch = "rustcrypto-new-releases" }
