[package]
name = "yubihsm"
version = "0.43.0-pre"
description = """
Pure Rust client for YubiHSM2 devices with support for HTTP and
USB-based access to the device. Supports most HSM functionality
including ECDSA, Ed25519, HMAC, and RSA.
"""
license = "Apache-2.0 OR MIT"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
documentation = "https://docs.rs/yubihsm"
repository = "https://github.com/iqlusioninc/yubihsm.rs"
readme = "README.md"
categories = ["cryptography", "hardware-support"]
keywords = ["ecdsa", "ed25519", "hmac", "hsm", "yubikey"]
edition = "2021"
rust-version = "1.85"

[dependencies]
aes = { version = "0.9.0-rc.2", features = ["zeroize"] }
bitflags = "2"
cmac = "0.8.0-rc.3"
cbc = "0.2.0-rc.2"
ccm = { version = "0.6.0-rc.2" }
der = { version = "0.8.0-rc.10" }
digest = { version = "0.11.0-rc.0", default-features = false }
ecdsa = { version = "0.17.0-rc.9", default-features = false, features = ["pkcs8"] }
ed25519 = "3.0.0-rc.2"
log = "0.4"
p256 = { version = "0.14.0-rc.1", default-features = false, features = ["ecdsa", "sha256"] }
p384 = { version = "0.14.0-rc.1", default-features = false, features = ["ecdsa", "sha384"] }
p521 = { version = "0.14.0-rc.1", default-features = false, features = ["ecdsa", "sha512"] }
serde = { version = "1", features = ["serde_derive"] }
rand = { version = "0.10.0-rc.5" }
rand_core = { version = "0.10.0-rc.2" }
rsa = "0.10.0-rc.10"
signature = { version = "3.0.0-rc.5" }
sha1 = { version = "0.11.0-rc.3", features = ["oid"] }
sha2 = { version = "0.11.0-rc.3", features = ["oid"] }
spki = { version = "0.8.0-rc.0", default-features = false }
subtle = "2"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", default-features = false }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

# optional dependencies
ed25519-dalek = { version = "3.0.0-pre.2", optional = true, features = ["rand_core"] }
hmac = { version = "0.13.0-rc.3", optional = true }
k256 = { version = "0.14.0-rc.1", optional = true, features = ["ecdsa", "sha256"] }
pbkdf2 = { version = "0.13.0-rc.5", optional = true, default-features = false, features = ["hmac"] }
serde_json = { version = "1", optional = true }
rusb = { version = "0.9.4", optional = true }
tiny_http = { version = "0.12", optional = true }
x509-cert = { version = "0.3.0-rc.1", features = ["builder", "hazmat"], optional = true }

[dev-dependencies]
ed25519-dalek = "=3.0.0-pre.2"
hex-literal = "1"
once_cell = "1"
rsa = { version = "0.10.0-rc.10", features = ["sha1", "sha2"] }
p256 = { version = "0.14.0-rc.1", features = ["ecdsa"] }
p384 = { version = "0.14.0-rc.1", features = ["ecdsa"] }
p521 = { version = "0.14.0-rc.1", features = ["ecdsa"] }
x509-cert = { version = "0.3.0-rc.2", features = ["builder"] }

[features]
default = ["http", "passwords", "setup"]
http-server = ["tiny_http"]
http = []
mockhsm = [
  "ecdsa/algorithm",
  "ed25519-dalek",
  "p256/ecdsa",
  "p256/pkcs8",
  "p384/pkcs8",
  "p521/pkcs8",
  "rsa/sha2",
  "secp256k1",
  "x509-cert"
]
passwords = ["hmac", "pbkdf2"]
secp256k1 = ["k256"]
setup = ["passwords", "serde_json", "uuid/serde"]
untested = []
usb = ["rusb"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "connector_http_server"
required-features = ["http-server", "usb"]
