[package]
name        = "scp03"
description = "GlobalPlatform Secure Channel Protocol 03 implementation targeting YubiHSM2 devices"
version     = "0.0.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "MIT/Apache-2.0"
homepage    = "https://github.com/tarcieri/yubihsm-client"
readme      = "README.md"
categories  = ["cryptography"]
keywords    = ["cryptography", "encryption", "security"]

[dependencies]
aesni = "0.2"
byteorder = { version = "1.2", default_features = false }
clear_on_drop = "0.2"
cmac = "0.1"
constant_time_eq = "0.1"
hmac = "0.4"
pbkdf2 = "0.1"
rand = "0.4"
sha2 = "0.6"
